NetworkPolicies/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  labels:
    app: networkpolicy
spec: 
  # determine which pod the network policy applies to
  podSelector:
    matchLabels:
      app: secure-app
  #  define the type traffic this policy is applied to   
  policyTypes:
  # Rules for incoming traffic
  - Ingress
  # Rules for outgoing traffic
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels: 
          # Ingress is applied to pod that has an attribute allow-access set to true
          allow-access: "true"
    ports:
    - protocol: TCP
      port: 80 
  egress: 
  - to: 
    - podSelector:
        matchLabels: 
          # Ingress is applied to pod that has an attribute allow-access set to true
          allow-access: "true" 
    ports:
    - protocol: TCP
      port: 80
